2004-07-16  Daniel Elstner  <daniel.elstner@gmx.net>

	* macros/cxx.m4 (REGEXXER_LINK_VERSION_SCRIPT): Rename from
	REGEXXER_CXXLINK_VERSION_SCRIPT() and make the macro language-
	acnostic.  Also, take the name of the output variable to set as
	first parameter instead of hardcoding it.
	(REGEXXER_ARG_ENABLE_WARNINGS): Don't change the current language
	but use AC_LANG_ASSERT() instead to make sure it's C++.  The user
	is required to select the approriate language by himself then, as
	recommended in the autoconf manual.

	* macros/misc.m4 (REGEXXER_LIB_POPT): Make language-acnostic.
	* macros/pcre.m4 (PCRE_CHECK_UTF8): ditto.

	* configure.ac: Reorder a couple of macro invocations and insert
	a call to AC_LANG([C++]).

2004-07-14  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/main.cc (parse_command_line): Fix the help string of the
	--ignore-case option to match the tool tip of the corresponding
	checkbutton.

2004-07-14  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/main.cc (parse_command_line): Replace `...' with \"...\" in
	message strings, for consistency with the rest of the application.

2004-07-14  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/filebuffer.{cc,h} (FileBuffer::find_matches): Add a feedback
	slot parameter and invoke it for every matching line.  The current
	line number and the subject string are passed as arguments to the
	feedback slot.

	* src/filetree.{cc,h} (FileTree::signal_feedback): New signal.
	(FileTree::find_matches_at_path_iter): Pass a feedback slot to
	FileBuffer::find_matches() that forwards to signal_feedback()
	with the fileinfo object bound as third argument.

	* src/mainwindow.{cc,h} (print_location): New handler for the
	feedback signal which prints the location of the match to standard
	output, in the same format as used by 'grep -n'.
	(InitState::feedback): New bool member.
	(MainWindow::initialize): Connect the filetree's signal_feedback
	to print_location if the init state's feedback flag is true.
