@@ -38,9 +38,9 @@ AC_SUBST([CONFIG_STATUS_DEPENDENCIES], ['$(top_srcdir)/po/LINGUAS'])
 AC_SUBST([GETTEXT_PACKAGE])
 AM_GLIB_GNU_GETTEXT()
 
-PKG_CHECK_MODULES([PKG], [gtkmm-2.4 >= 2.4.0 libglademm-2.4 >= 2.4.0 gconfmm-2.6 >= 2.6.1])
-AC_SUBST([PKG_CFLAGS])
-AC_SUBST([PKG_LIBS])
+PKG_CHECK_MODULES([REGEXXER], [gtkmm-2.4 >= 2.4.0 libglademm-2.4 >= 2.4.0 gconfmm-2.6 >= 2.6.1])
+AC_SUBST([REGEXXER_CFLAGS])
+AC_SUBST([REGEXXER_LIBS])
 
 REGEXXER_PKG_PATH_PROG([GDK_PIXBUF_CSOURCE], [gdk-pixbuf-2.0], [gdk-pixbuf-csource])
 REGEXXER_PKG_PATH_PROG([GCONFTOOL], [gconf-2.0], [gconftool-2])
