@@ -67,8 +67,8 @@ global_defines = \
 -DREGEXXER_GCONF_DIRECTORY=\""$(REGEXXER_GCONF_DIRECTORY)"\" \
 -DGTKMM_DISABLE_DEPRECATED
 
-AM_CPPFLAGS = -I$(top_builddir) -I$(top_srcdir) $(global_defines) $(PKG_CFLAGS) $(PCRE_CFLAGS)
+AM_CPPFLAGS = -I$(top_builddir) -I$(top_srcdir) $(global_defines) $(REGEXXER_CFLAGS) $(PCRE_CFLAGS)
 regexxer_DEPENDENCIES = exported-symbols
 regexxer_LDFLAGS = $(REGEXXER_VERSION_SCRIPT)
-regexxer_LDADD = $(LIBINTL) $(PKG_LIBS) $(PCRE_LIBS) $(POPT_LIBS)
+regexxer_LDADD = $(LIBINTL) $(REGEXXER_LIBS) $(PCRE_LIBS) $(POPT_LIBS)
 
